# Knowledge-Distillation-Basic

./: .gitignore  README.md  knowledge_distillation.py  main.py  pyproject.toml  teach.py  test.py  train.py  utils.py  visualize.py  weather_dataset.py
docs/experiment_1/basic/logs/student/Loss_Train/: events.out.tfevents.1743295670.MSI.24632.1
docs/experiment_1/basic/logs/teacher/: events.out.tfevents.1743297235.MSI.24632.3
docs/experiment_1/basic/logs/teacher/Loss_Val/: events.out.tfevents.1743297235.MSI.24632.5
docs/experiment_1/kd/: log.txt
docs/experiment_1/kd/logs/kd_student/: events.out.tfevents.1743386293.MSI.26764.0
docs/experiment_1/kd/logs/kd_student/Loss_Train/: events.out.tfevents.1743386293.MSI.26764.1
docs/experiment_1/try_diff_batch/logs/teacher/: events.out.tfevents.1743324625.MSI.16172.0
docs/experiment_2/basic/: log.txt
docs/experiment_2/basic/logs/student/: events.out.tfevents.1743467226.MSI.13796.0
docs/experiment_2/basic/logs/teacher/: events.out.tfevents.1743467871.MSI.13796.3
docs/experiment_2/kd/: log.txt
docs/experiment_2/kd/logs/kd_student/: events.out.tfevents.1743472150.MSI.20344.0
docs/result_1/: log.txt
docs/result_1/logs/teacher/Loss_Train/: events.out.tfevents.1743297235.MSI.24632.4
docs/result_2/: log.txt
docs/result_2/logs/student/: events.out.tfevents.1743295670.MSI.24632.0
docs/result_2/logs/student/Loss_Val/: events.out.tfevents.1743295670.MSI.24632.2
docs/result_2/logs/teacher/Loss_Val/: events.out.tfevents.1743324625.MSI.16172.2
(+9 files in other folders)
